v1.0.0/modules/schema/pages/class/GovHydro3.adoc
= `GovHydro3`
:toclevels: 4


+++Modified IEEE hydro governor-turbine. This model differs from that defined in the IEEE modelling guideline paper in that the limits on gate position and velocity do not permit "wind up" of the upstream signals.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovHydro3`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovHydro3`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
GovHydro3 {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





































































AsynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TurbineLoadControllerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





































GovHydro3 -> AsynchronousMachineDynamics: AsynchronousMachineDynamics


GovHydro3 -> TurbineLoadControllerDynamics: TurbineLoadControllerDynamics


GovHydro3 -> SynchronousMachineDynamics: SynchronousMachineDynamics


GovHydro3 -> DiagramObject: DiagramObjects


GovHydro3 -> InstanceSet: InstanceSet


GovHydro3 -> Name: Names


GovHydro3 -> ChangeSetMember: PropertiesCIMDataObject


GovHydro3 -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<at,`at`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Turbine gain (<i>At</i>) (&gt;0).  Typical value = 1,2.+++

| <<db1,`db1`>>
| 0..1
| xref::class/Frequency.adoc[`Frequency`]
| +++Intentional dead-band width (<i>db1</i>).  Unit = Hz.  Typical value = 0.+++

| <<db2,`db2`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Unintentional dead-band (<i>db2</i>).  Unit = MW.  Typical value = 0.+++

| <<dturb,`dturb`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Turbine damping factor (<i>Dturb</i>).  Typical value = 0,2.+++

| <<eps,`eps`>>
| 0..1
| xref::class/Frequency.adoc[`Frequency`]
| +++Intentional db hysteresis (<i>eps</i>).  Unit = Hz.  Typical value = 0.+++

| <<governorControl,`governorControl`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Governor control flag (<i>Cflag</i>).
true = PID control is active
false = double derivative control is active.
Typical value = true.+++

| <<gv1,`gv1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 1, PU gv (<i>Gv1</i>).  Typical value = 0.+++

| <<gv2,`gv2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 2, PU gv (<i>Gv2</i>).  Typical value = 0.+++

| <<gv3,`gv3`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 3, PU gv (<i>Gv3</i>).  Typical value = 0.+++

| <<gv4,`gv4`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 4, PU gv (<i>Gv4</i>).  Typical value = 0.+++

| <<gv5,`gv5`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 5, PU gv (<i>Gv5</i>).  Typical value = 0.+++

| <<gv6,`gv6`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 6, PU gv (<i>Gv6</i>).  Typical value = 0.+++

| <<h0,`h0`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Turbine nominal head (<i>H0</i>).  Typical value = 1.+++

| <<k1,`k1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Derivative gain (<i>K1</i>).  Typical value = 0,01.+++

| <<k2,`k2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Double derivative gain, if <i>Cflag</i> = -1 (<i>K2</i>).  Typical value = 2,5.+++

| <<kg,`kg`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Gate servo gain (<i>Kg</i>).  Typical value = 2.+++

| <<ki,`ki`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Integral gain (<i>Ki</i>).  Typical value = 0,5.+++

| <<mwbase,`mwbase`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

| <<pgv1,`pgv1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 1, PU power (<i>Pgv1</i>).  Typical value = 0.+++

| <<pgv2,`pgv2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 2, PU power (<i>Pgv2</i>).  Typical value = 0.+++

| <<pgv3,`pgv3`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 3, PU power (<i>Pgv3</i>).  Typical value = 0.+++

| <<pgv4,`pgv4`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 4, PU power (<i>Pgv4</i>).  Typical value = 0.+++

| <<pgv5,`pgv5`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 5, PU power (<i>Pgv5</i>).  Typical value = 0.+++

| <<pgv6,`pgv6`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 6, PU power (<i>Pgv6</i>).  Typical value = 0.+++

| <<pmax,`pmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum gate opening, PU of MWbase (<i>Pmax</i>) (&gt; GovHydro3.pmin).  Typical value = 1.+++

| <<pmin,`pmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum gate opening, PU of <i>MWbase</i> (<i>Pmin</i>) (&lt; GovHydro3.pmax).  Typical value = 0.+++

| <<qnl,`qnl`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++No-load turbine flow at nominal head (<i>Qnl</i>).  Typical value = 0,08.+++

| <<relec,`relec`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Steady-state droop, PU, for electrical power feedback (<i>Relec</i>).  Typical value = 0,05.+++

| <<rgate,`rgate`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Steady-state droop, PU, for governor output feedback (<i>Rgate</i>).  Typical value = 0.+++

| <<td,`td`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Input filter time constant (<i>Td</i>) (&gt;= 0).  Typical value = 0,05.+++

| <<tf,`tf`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Washout time constant (<i>Tf</i>) (&gt;= 0).  Typical value = 0,1.+++

| <<tp,`tp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Gate servo time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,05.+++

| <<tt,`tt`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Power feedback time constant (<i>Tt</i>) (&gt;= 0).  Typical value = 0,2.+++

| <<tw,`tw`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Water inertia time constant (<i>Tw</i>) (&gt;= 0).  If = 0, block is bypassed.  Typical value = 1.+++

| <<velcl,`velcl`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum gate closing velocity (<i>Velcl</i>).  Unit = PU / s.  Typical value = -0,2.+++

| <<velop,`velop`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum gate opening velocity (<i>Velop</i>).  Unit = PU / s. Typical value = 0,2.+++

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#at]
=== `at`
+++Turbine gain (<i>At</i>) (&gt;0).  Typical value = 1,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.at`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#db1]
=== `db1`
+++Intentional dead-band width (<i>db1</i>).  Unit = Hz.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.db1`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

//[discrete]
[#db2]
=== `db2`
+++Unintentional dead-band (<i>db2</i>).  Unit = MW.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.db2`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#dturb]
=== `dturb`
+++Turbine damping factor (<i>Dturb</i>).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.dturb`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#eps]
=== `eps`
+++Intentional db hysteresis (<i>eps</i>).  Unit = Hz.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.eps`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

//[discrete]
[#governorControl]
=== `governorControl`
+++Governor control flag (<i>Cflag</i>).
true = PID control is active
false = double derivative control is active.
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.governorControl`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#gv1]
=== `gv1`
+++Nonlinear gain point 1, PU gv (<i>Gv1</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.gv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv2]
=== `gv2`
+++Nonlinear gain point 2, PU gv (<i>Gv2</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.gv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv3]
=== `gv3`
+++Nonlinear gain point 3, PU gv (<i>Gv3</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.gv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv4]
=== `gv4`
+++Nonlinear gain point 4, PU gv (<i>Gv4</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.gv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv5]
=== `gv5`
+++Nonlinear gain point 5, PU gv (<i>Gv5</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.gv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv6]
=== `gv6`
+++Nonlinear gain point 6, PU gv (<i>Gv6</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.gv6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#h0]
=== `h0`
+++Turbine nominal head (<i>H0</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.h0`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#k1]
=== `k1`
+++Derivative gain (<i>K1</i>).  Typical value = 0,01.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.k1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#k2]
=== `k2`
+++Double derivative gain, if <i>Cflag</i> = -1 (<i>K2</i>).  Typical value = 2,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.k2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kg]
=== `kg`
+++Gate servo gain (<i>Kg</i>).  Typical value = 2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.kg`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ki]
=== `ki`
+++Integral gain (<i>Ki</i>).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.ki`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pgv1]
=== `pgv1`
+++Nonlinear gain point 1, PU power (<i>Pgv1</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pgv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv2]
=== `pgv2`
+++Nonlinear gain point 2, PU power (<i>Pgv2</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pgv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv3]
=== `pgv3`
+++Nonlinear gain point 3, PU power (<i>Pgv3</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pgv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv4]
=== `pgv4`
+++Nonlinear gain point 4, PU power (<i>Pgv4</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pgv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv5]
=== `pgv5`
+++Nonlinear gain point 5, PU power (<i>Pgv5</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pgv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv6]
=== `pgv6`
+++Nonlinear gain point 6, PU power (<i>Pgv6</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pgv6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pmax]
=== `pmax`
+++Maximum gate opening, PU of MWbase (<i>Pmax</i>) (&gt; GovHydro3.pmin).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pmin]
=== `pmin`
+++Minimum gate opening, PU of <i>MWbase</i> (<i>Pmin</i>) (&lt; GovHydro3.pmax).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#qnl]
=== `qnl`
+++No-load turbine flow at nominal head (<i>Qnl</i>).  Typical value = 0,08.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.qnl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#relec]
=== `relec`
+++Steady-state droop, PU, for electrical power feedback (<i>Relec</i>).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.relec`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#rgate]
=== `rgate`
+++Steady-state droop, PU, for governor output feedback (<i>Rgate</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.rgate`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#td]
=== `td`
+++Input filter time constant (<i>Td</i>) (&gt;= 0).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.td`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tf]
=== `tf`
+++Washout time constant (<i>Tf</i>) (&gt;= 0).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.tf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tp]
=== `tp`
+++Gate servo time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.tp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tt]
=== `tt`
+++Power feedback time constant (<i>Tt</i>) (&gt;= 0).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.tt`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#tw]
=== `tw`
+++Water inertia time constant (<i>Tw</i>) (&gt;= 0).  If = 0, block is bypassed.  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.tw`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#velcl]
=== `velcl`
+++Maximum gate closing velocity (<i>Velcl</i>).  Unit = PU / s.  Typical value = -0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.velcl`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#velop]
=== `velop`
+++Maximum gate opening velocity (<i>Velop</i>).  Unit = PU / s. Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.velop`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===


