v1.1.0/modules/schema/pages/class/GovHydro3.adoc
= `GovHydro3`
:toclevels: 4


+++Modified IEEE hydro governor-turbine. This model differs from that defined in the IEEE modelling guideline paper in that the limits on gate position and velocity do not permit "wind up" of the upstream signals.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovHydro3`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovHydro3`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<at,`at`>>
//| [[slots_table.at]]<<at,`at`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Turbine gain (<i>At</i>) (&gt;0).  Typical value = 1,2.+++
| _n/a_

| <<db1,`db1`>>
//| [[slots_table.db1]]<<db1,`db1`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Intentional dead-band width (<i>db1</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<db2,`db2`>>
//| [[slots_table.db2]]<<db2,`db2`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Unintentional dead-band (<i>db2</i>).  Unit = MW.  Typical value = 0.+++
| _n/a_

| <<dturb,`dturb`>>
//| [[slots_table.dturb]]<<dturb,`dturb`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Turbine damping factor (<i>Dturb</i>).  Typical value = 0,2.+++
| _n/a_

| <<eps,`eps`>>
//| [[slots_table.eps]]<<eps,`eps`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Intentional db hysteresis (<i>eps</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<governorControl,`governorControl`>>
//| [[slots_table.governorControl]]<<governorControl,`governorControl`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Governor control flag (<i>Cflag</i>).
true = PID control is active
false = double derivative control is active.
Typical...+++
| _n/a_

| <<gv1,`gv1`>>
//| [[slots_table.gv1]]<<gv1,`gv1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 1, PU gv (<i>Gv1</i>).  Typical value = 0.+++
| _n/a_

| <<gv2,`gv2`>>
//| [[slots_table.gv2]]<<gv2,`gv2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 2, PU gv (<i>Gv2</i>).  Typical value = 0.+++
| _n/a_

| <<gv3,`gv3`>>
//| [[slots_table.gv3]]<<gv3,`gv3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 3, PU gv (<i>Gv3</i>).  Typical value = 0.+++
| _n/a_

| <<gv4,`gv4`>>
//| [[slots_table.gv4]]<<gv4,`gv4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 4, PU gv (<i>Gv4</i>).  Typical value = 0.+++
| _n/a_

| <<gv5,`gv5`>>
//| [[slots_table.gv5]]<<gv5,`gv5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 5, PU gv (<i>Gv5</i>).  Typical value = 0.+++
| _n/a_

| <<gv6,`gv6`>>
//| [[slots_table.gv6]]<<gv6,`gv6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 6, PU gv (<i>Gv6</i>).  Typical value = 0.+++
| _n/a_

| <<h0,`h0`>>
//| [[slots_table.h0]]<<h0,`h0`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Turbine nominal head (<i>H0</i>).  Typical value = 1.+++
| _n/a_

| <<k1,`k1`>>
//| [[slots_table.k1]]<<k1,`k1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Derivative gain (<i>K1</i>).  Typical value = 0,01.+++
| _n/a_

| <<k2,`k2`>>
//| [[slots_table.k2]]<<k2,`k2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Double derivative gain, if <i>Cflag</i> = -1 (<i>K2</i>).  Typical value = 2,5.+++
| _n/a_

| <<kg,`kg`>>
//| [[slots_table.kg]]<<kg,`kg`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gate servo gain (<i>Kg</i>).  Typical value = 2.+++
| _n/a_

| <<ki,`ki`>>
//| [[slots_table.ki]]<<ki,`ki`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Integral gain (<i>Ki</i>).  Typical value = 0,5.+++
| _n/a_

| <<mwbase,`mwbase`>>
//| [[slots_table.mwbase]]<<mwbase,`mwbase`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++
| _n/a_

| <<pgv1,`pgv1`>>
//| [[slots_table.pgv1]]<<pgv1,`pgv1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 1, PU power (<i>Pgv1</i>).  Typical value = 0.+++
| _n/a_

| <<pgv2,`pgv2`>>
//| [[slots_table.pgv2]]<<pgv2,`pgv2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 2, PU power (<i>Pgv2</i>).  Typical value = 0.+++
| _n/a_

| <<pgv3,`pgv3`>>
//| [[slots_table.pgv3]]<<pgv3,`pgv3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 3, PU power (<i>Pgv3</i>).  Typical value = 0.+++
| _n/a_

| <<pgv4,`pgv4`>>
//| [[slots_table.pgv4]]<<pgv4,`pgv4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 4, PU power (<i>Pgv4</i>).  Typical value = 0.+++
| _n/a_

| <<pgv5,`pgv5`>>
//| [[slots_table.pgv5]]<<pgv5,`pgv5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 5, PU power (<i>Pgv5</i>).  Typical value = 0.+++
| _n/a_

| <<pgv6,`pgv6`>>
//| [[slots_table.pgv6]]<<pgv6,`pgv6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 6, PU power (<i>Pgv6</i>).  Typical value = 0.+++
| _n/a_

| <<pmax,`pmax`>>
//| [[slots_table.pmax]]<<pmax,`pmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum gate opening, PU of MWbase (<i>Pmax</i>) (&gt; GovHydro3.pmin).  Typical value = 1.+++
| _n/a_

| <<pmin,`pmin`>>
//| [[slots_table.pmin]]<<pmin,`pmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum gate opening, PU of <i>MWbase</i> (<i>Pmin</i>) (&lt; GovHydro3.pmax).  Typical value = 0.+++
| _n/a_

| <<qnl,`qnl`>>
//| [[slots_table.qnl]]<<qnl,`qnl`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++No-load turbine flow at nominal head (<i>Qnl</i>).  Typical value = 0,08.+++
| _n/a_

| <<relec,`relec`>>
//| [[slots_table.relec]]<<relec,`relec`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Steady-state droop, PU, for electrical power feedback (<i>Relec</i>).  Typical value = 0,05.+++
| _n/a_

| <<rgate,`rgate`>>
//| [[slots_table.rgate]]<<rgate,`rgate`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Steady-state droop, PU, for governor output feedback (<i>Rgate</i>).  Typical value = 0.+++
| _n/a_

| <<td,`td`>>
//| [[slots_table.td]]<<td,`td`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Input filter time constant (<i>Td</i>) (&gt;= 0).  Typical value = 0,05.+++
| _n/a_

| <<tf,`tf`>>
//| [[slots_table.tf]]<<tf,`tf`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Washout time constant (<i>Tf</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<tp,`tp`>>
//| [[slots_table.tp]]<<tp,`tp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Gate servo time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,05.+++
| _n/a_

| <<tt,`tt`>>
//| [[slots_table.tt]]<<tt,`tt`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Power feedback time constant (<i>Tt</i>) (&gt;= 0).  Typical value = 0,2.+++
| _n/a_

| <<tw,`tw`>>
//| [[slots_table.tw]]<<tw,`tw`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Water inertia time constant (<i>Tw</i>) (&gt;= 0).  If = 0, block is bypassed.  Typical value = 1.+++
| _n/a_

| <<velcl,`velcl`>>
//| [[slots_table.velcl]]<<velcl,`velcl`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum gate closing velocity (<i>Velcl</i>).  Unit = PU / s.  Typical value = -0,2.+++
| _n/a_

| <<velop,`velop`>>
//| [[slots_table.velop]]<<velop,`velop`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum gate opening velocity (<i>Velop</i>).  Unit = PU / s. Typical value = 0,2.+++
| _n/a_

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
//| [[slots_table.AsynchronousMachineDynamics]]<<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1 +
xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
//| [[slots_table.TurbineLoadControllerDynamics]]<<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1 +
xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.AsynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#at]
=== `at`
+++Turbine gain (<i>At</i>) (&gt;0).  Typical value = 1,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.at`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.at,&#10548;>>
--
////


//[discrete]
[#db1]
=== `db1`
+++Intentional dead-band width (<i>db1</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.db1`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.db1,&#10548;>>
--
////


//[discrete]
[#db2]
=== `db2`
+++Unintentional dead-band (<i>db2</i>).  Unit = MW.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.db2`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.db2,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dturb]
=== `dturb`
+++Turbine damping factor (<i>Dturb</i>).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.dturb`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dturb,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#eps]
=== `eps`
+++Intentional db hysteresis (<i>eps</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.eps`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.eps,&#10548;>>
--
////


//[discrete]
[#governorControl]
=== `governorControl`
+++Governor control flag (<i>Cflag</i>).
true = PID control is active
false = double derivative control is active.
Typical value = true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.governorControl`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.governorControl,&#10548;>>
--
////


//[discrete]
[#gv1]
=== `gv1`
+++Nonlinear gain point 1, PU gv (<i>Gv1</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.gv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv1,&#10548;>>
--
////


//[discrete]
[#gv2]
=== `gv2`
+++Nonlinear gain point 2, PU gv (<i>Gv2</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.gv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv2,&#10548;>>
--
////


//[discrete]
[#gv3]
=== `gv3`
+++Nonlinear gain point 3, PU gv (<i>Gv3</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.gv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv3,&#10548;>>
--
////


//[discrete]
[#gv4]
=== `gv4`
+++Nonlinear gain point 4, PU gv (<i>Gv4</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.gv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv4,&#10548;>>
--
////


//[discrete]
[#gv5]
=== `gv5`
+++Nonlinear gain point 5, PU gv (<i>Gv5</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.gv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv5,&#10548;>>
--
////


//[discrete]
[#gv6]
=== `gv6`
+++Nonlinear gain point 6, PU gv (<i>Gv6</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.gv6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv6,&#10548;>>
--
////


//[discrete]
[#h0]
=== `h0`
+++Turbine nominal head (<i>H0</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.h0`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.h0,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#k1]
=== `k1`
+++Derivative gain (<i>K1</i>).  Typical value = 0,01.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.k1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k1,&#10548;>>
--
////


//[discrete]
[#k2]
=== `k2`
+++Double derivative gain, if <i>Cflag</i> = -1 (<i>K2</i>).  Typical value = 2,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.k2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k2,&#10548;>>
--
////


//[discrete]
[#kg]
=== `kg`
+++Gate servo gain (<i>Kg</i>).  Typical value = 2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.kg`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kg,&#10548;>>
--
////


//[discrete]
[#ki]
=== `ki`
+++Integral gain (<i>Ki</i>).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.ki`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ki,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.mwbase,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pgv1]
=== `pgv1`
+++Nonlinear gain point 1, PU power (<i>Pgv1</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pgv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv1,&#10548;>>
--
////


//[discrete]
[#pgv2]
=== `pgv2`
+++Nonlinear gain point 2, PU power (<i>Pgv2</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pgv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv2,&#10548;>>
--
////


//[discrete]
[#pgv3]
=== `pgv3`
+++Nonlinear gain point 3, PU power (<i>Pgv3</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pgv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv3,&#10548;>>
--
////


//[discrete]
[#pgv4]
=== `pgv4`
+++Nonlinear gain point 4, PU power (<i>Pgv4</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pgv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv4,&#10548;>>
--
////


//[discrete]
[#pgv5]
=== `pgv5`
+++Nonlinear gain point 5, PU power (<i>Pgv5</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pgv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv5,&#10548;>>
--
////


//[discrete]
[#pgv6]
=== `pgv6`
+++Nonlinear gain point 6, PU power (<i>Pgv6</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pgv6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv6,&#10548;>>
--
////


//[discrete]
[#pmax]
=== `pmax`
+++Maximum gate opening, PU of MWbase (<i>Pmax</i>) (&gt; GovHydro3.pmin).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmax,&#10548;>>
--
////


//[discrete]
[#pmin]
=== `pmin`
+++Minimum gate opening, PU of <i>MWbase</i> (<i>Pmin</i>) (&lt; GovHydro3.pmax).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.pmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmin,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#qnl]
=== `qnl`
+++No-load turbine flow at nominal head (<i>Qnl</i>).  Typical value = 0,08.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.qnl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.qnl,&#10548;>>
--
////


//[discrete]
[#relec]
=== `relec`
+++Steady-state droop, PU, for electrical power feedback (<i>Relec</i>).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.relec`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.relec,&#10548;>>
--
////


//[discrete]
[#rgate]
=== `rgate`
+++Steady-state droop, PU, for governor output feedback (<i>Rgate</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.rgate`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rgate,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#td]
=== `td`
+++Input filter time constant (<i>Td</i>) (&gt;= 0).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.td`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.td,&#10548;>>
--
////


//[discrete]
[#tf]
=== `tf`
+++Washout time constant (<i>Tf</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.tf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tf,&#10548;>>
--
////


//[discrete]
[#tp]
=== `tp`
+++Gate servo time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.tp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tp,&#10548;>>
--
////


//[discrete]
[#tt]
=== `tt`
+++Power feedback time constant (<i>Tt</i>) (&gt;= 0).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.tt`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tt,&#10548;>>
--
////


//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineLoadControllerDynamics,&#10548;>>
--
////


//[discrete]
[#tw]
=== `tw`
+++Water inertia time constant (<i>Tw</i>) (&gt;= 0).  If = 0, block is bypassed.  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.tw`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tw,&#10548;>>
--
////


//[discrete]
[#velcl]
=== `velcl`
+++Maximum gate closing velocity (<i>Velcl</i>).  Unit = PU / s.  Typical value = -0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.velcl`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.velcl,&#10548;>>
--
////


//[discrete]
[#velop]
=== `velop`
+++Maximum gate opening velocity (<i>Velop</i>).  Unit = PU / s. Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro3.velop`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.velop,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
